Colab을 통해 생성됨

--- a/agent_pattern.ipynb
+++ b/agent_pattern.ipynb
@@ -6,24 +6,11 @@
       "provenance": [],
       "collapsed_sections": [
         "ERCG8LefaX33",
-        "ehIezWEaajKR",
-        "lFACiazxqBeK",
-        "rDXdgSpop1qb",
-        "7scQ69xTbS3O",
-        "kP16oCAwawq2",
-        "QtEy1_mMrxoX",
-        "43pV-jAmsAZf",
-        "sksFSADgsLM3",
-        "alqHd1KutqEv",
-        "V7rLljfvxLfh",
-        "Bj2GTjr4xTCv",
-        "BV3CJLc87yf1",
-        "InnjMGqM-anr",
-        "6YZ6Asa8-gQ2",
-        "irEIUmY5-p7q"
+        "2znB-998RCON",
+        "OfRLzAbpPzdu"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNWhTe5I1ZpTwT7Ydo70ypK",
+      "authorship_tag": "ABX9TyOYUvG8LNu1BRiLT3ZtJArg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +35,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 0. Common Setup\n",
+        "# Common Setup\n",
         "\n",
         "참고 : 아래 Secret으로 Key 등록해서 실습함\n",
         "1.   LLM API Key (GPT, claude 등) : OPENAI-KEY 로 등록했음\n",
@@ -61,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "xaaHPNB-JuRU"
@@ -90,13 +77,13 @@
       "metadata": {
         "id": "0of3EhdAK8Wt"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## ㄴ 0.1 Tools"
+        "## ㄴ 1. Tools"
       ],
       "metadata": {
         "id": "rHIPs8XTcfpR"
@@ -153,7 +140,7 @@
         "id": "wyVc3d97jxUh",
         "outputId": "b6436235-7515-4656-dfa9-b839cdd11c38"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,7 +155,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 1. Zero-Shot ReAct\n",
+        "# [Gen 1] Prompt-driven Tool-Using Agents(ReAct-based Agents)\n",
+        "> **LLM**이 매 순간 다음 행동을 **즉흥 결정**\n",
+        "*   LLM이 생각(Reasoning) 하고\n",
+        "*   외부 도구를 행동(Act) 으로 호출하며\n",
+        "*   그 결과를 다시 보고 추론을 이어가는 \"Tool-using LLM Loop\"\n",
+        "*   2022 ~ 2024\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "2znB-998RCON"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ㄴ 1. Zero-Shot ReAct\n",
         "*   기억 없음(Stateless)\n",
         "*   **LLM + Tools**\n",
         "\n",
@@ -182,7 +185,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ㄴ 1.1 Description"
+        "### ㄴ 1.1 Description"
       ],
       "metadata": {
         "id": "YAnx3hYxpLVg"
@@ -191,7 +194,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ㄴ 1.1.1 Workflow\n"
+        "#### ㄴ 1.1.1 Workflow\n"
       ],
       "metadata": {
         "id": "hYUi-RFIpe9p"
@@ -238,7 +241,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ㄴ 1.1.2 Inner ReAct Loop"
+        "#### ㄴ 1.1.2 Inner ReAct Loop"
       ],
       "metadata": {
         "id": "lFACiazxqBeK"
@@ -265,7 +268,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ㄴ 1.2 Code"
+        "### ㄴ 1.2 Code"
       ],
       "metadata": {
         "id": "rDXdgSpop1qb"
@@ -285,7 +288,7 @@
         "id": "4mcT3ELCjyDZ",
         "outputId": "534357e9-118d-4f5f-ed65-04d6dd388ebd"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,7 +310,7 @@
       "metadata": {
         "id": "vSI9contrFxX"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -325,7 +328,7 @@
         "id": "tHHfmPKBrDtq",
         "outputId": "82948ee9-8ab9-4294-c75b-730a8b5cf810"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,7 +344,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ㄴ 1.3 Verbose"
+        "### ㄴ 1.3 Verbose"
       ],
       "metadata": {
         "id": "7scQ69xTbS3O"
@@ -380,7 +383,7 @@
         "id": "mWt9u_sNjzzv",
         "outputId": "a7f40c96-aab6-447d-98d2-680cf5d9b2c3"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,13 +412,13 @@
       "metadata": {
         "id": "BrN_rPDn1ohp"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# 2. Conversational ReAct\n",
+        "## ㄴ 2. Conversational ReAct\n",
         "*   메모리 사용\n",
         "*   **LLM + Tools + Checkpointer**\n",
         "\n"
@@ -427,7 +430,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ㄴ 2.1 Description"
+        "### ㄴ 2.1 Description"
       ],
       "metadata": {
         "id": "QtEy1_mMrxoX"
@@ -436,7 +439,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ㄴ 2.1.1 Workflow"
+        "#### ㄴ 2.1.1 Workflow"
       ],
       "metadata": {
         "id": "43pV-jAmsAZf"
@@ -488,7 +491,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ㄴ 2.1.2 Inner ReAct Loop"
+        "#### ㄴ 2.1.2 Inner ReAct Loop"
       ],
       "metadata": {
         "id": "sksFSADgsLM3"
@@ -513,7 +516,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ㄴ 2.2 Code"
+        "### ㄴ 2.2 Code"
       ],
       "metadata": {
         "id": "BZJtKmFur3ly"
@@ -535,7 +538,7 @@
         "id": "_5j7GyaUZjqv",
         "outputId": "37ab46f9-2882-4da2-f142-7d6880ec638d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -558,7 +561,7 @@
       "metadata": {
         "id": "gMf3OMaGZ7ku"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -578,7 +581,7 @@
         "id": "EUUVKU_wZpaI",
         "outputId": "0caaffd9-1dad-4edd-dbf7-86404b64c95e"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -594,7 +597,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ㄴ 2.3 Verbose"
+        "### ㄴ 2.3 Verbose"
       ],
       "metadata": {
         "id": "fVi1sXZ-bgqf"
@@ -603,7 +606,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ㄴ 2.3.1 Test Setup"
+        "#### ㄴ 2.3.1 Test Setup"
       ],
       "metadata": {
         "id": "zA7HHzH8kuhi"
@@ -686,13 +689,13 @@
         "collapsed": true,
         "id": "2LB9H_IbaSK1"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### ㄴ 2.3.2 Test A (같은 thread_id)\n",
+        "#### ㄴ 2.3.2 Test A (같은 thread_id)\n",
         "\n",
         "*   Q1을 thread_id A 에 저장\n",
         "*   Q2를 thread_id A 에 질의\n",
@@ -720,7 +723,7 @@
         "id": "nwQbCVIOlA3x",
         "outputId": "06a0a199-ccb2-4abf-ec69-cd116cdd23e4"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -773,7 +776,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ㄴ 2.3.3 TEST B (다른 thread_id)\n",
+        "#### ㄴ 2.3.3 TEST B (다른 thread_id)\n",
         "\n",
         "*   Q1을 thread_id A 에 저장\n",
         "*   Q2를 thread_id B에 질의\n",
@@ -798,7 +801,7 @@
         "id": "0Qi1B1S2lM3i",
         "outputId": "0f1d6be0-d8f1-4299-cdea-870eb5f5dfd4"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -841,7 +844,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 3. Search-augmented ReAct (Self-ask with search)\n",
+        "## ㄴ 3. Search-augmented ReAct (Self-ask with search)\n",
         "\n",
         "*   질문 분해 중심\n",
         "*   **RAG와 매우 유사**\n",
@@ -855,7 +858,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ㄴ 3.1 Description"
+        "### ㄴ 3.1 Description"
       ],
       "metadata": {
         "id": "ZsEO8BqCxETT"
@@ -864,7 +867,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ㄴ 3.1.1. Workflow"
+        "#### ㄴ 3.1.1. Workflow"
       ],
       "metadata": {
         "id": "V7rLljfvxLfh"
@@ -907,7 +910,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ㄴ 3.1.2 Inner ReAct Loop"
+        "#### ㄴ 3.1.2 Inner ReAct Loop"
       ],
       "metadata": {
         "id": "Bj2GTjr4xTCv"
@@ -931,7 +934,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ㄴ 3.2 Code"
+        "### ㄴ 3.2 Code"
       ],
       "metadata": {
         "id": "vuRDO56bxdTE"
@@ -971,7 +974,7 @@
       "metadata": {
         "id": "aBV7rR953T53"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -988,7 +991,7 @@
         "id": "-iImBDY1xhqV",
         "outputId": "bf147ce3-480c-4104-c3b5-1d9debc7aa13"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1010,7 +1013,7 @@
       "metadata": {
         "id": "aSD-JJbi19tl"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1029,7 +1032,7 @@
         "id": "9JKLGdqQ11pJ",
         "outputId": "654859ab-83fb-4159-c1fe-1313db19d1bf"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1054,7 +1057,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ㄴ 3.3. Verbose"
+        "### ㄴ 3.3. Verbose"
       ],
       "metadata": {
         "id": "LrTWqWT0xjtq"
@@ -1108,7 +1111,7 @@
         "id": "XMEImNybxuzH",
         "outputId": "08d3ad0a-f3c3-48f9-d96c-9b82c09b5edb"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1156,7 +1159,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 4. ReAct docstore\n",
+        "## ㄴ 4. ReAct docstore\n",
         "\n",
         "*   LLM이 문서 저장소를 스스로 탐색\n",
         "*   필요한 문서를 조회(Lookup)하여 근거 기반 답변을 생성\n",
@@ -1169,7 +1172,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ㄴ 4.1 Description"
+        "### ㄴ 4.1 Description"
       ],
       "metadata": {
         "id": "InnjMGqM-anr"
@@ -1178,7 +1181,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ㄴ 4.1.1 Workflow"
+        "#### ㄴ 4.1.1 Workflow"
       ],
       "metadata": {
         "id": "6YZ6Asa8-gQ2"
@@ -1227,7 +1230,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ㄴ 4.1.2 Inner ReAct Loop"
+        "#### ㄴ 4.1.2 Inner ReAct Loop"
       ],
       "metadata": {
         "id": "irEIUmY5-p7q"
@@ -1256,7 +1259,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ㄴ 4.2 Code"
+        "### ㄴ 4.2 Code"
       ],
       "metadata": {
         "id": "Pjc24Na8-yza"
@@ -1276,7 +1279,7 @@
         "id": "yUNy0ToZ-o0S",
         "outputId": "3a00f5d5-edb3-4a79-b682-140e232e5e6c"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1303,7 +1306,7 @@
       "metadata": {
         "id": "Scbnrykx-ecp"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1322,7 +1325,7 @@
         "id": "HHLW_HGiBPLf",
         "outputId": "bcfaf8aa-a081-4afe-c3e4-cde3ae34d687"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1338,7 +1341,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ㄴ 4.3 Verbose"
+        "### ㄴ 4.3 Verbose"
       ],
       "metadata": {
         "id": "Lr3TMvzl-2Q-"
@@ -1388,7 +1391,7 @@
         "id": "V5LEMXZFDYvI",
         "outputId": "6c370b60-c608-4e30-9ef3-21222f970b8b"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1434,6 +1437,29 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# [Gen 2] LLM Orchestrated Systems(Post-ReAct Agent Architectures)\n",
+        "> Workflow Engine이 **순서를 결정**, LLM은 **필요할 때만 호출**\n",
+        "*   계획 수립 / 의도 해석   ← LLM\n",
+        "*   실행 흐름은 시스템이 통제 ← Runtime / Graph / Process\n",
+        "*   Tool 실행은 강제된 구조로 수행\n",
+        "*   상태(State)를 외부에서 관리\n",
+        "*   2024 ~ 현재\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "OfRLzAbpPzdu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "rNEdkyFfV8N6"
+      }
     }
   ]
 }
