--- a/agent_pattern.ipynb
+++ b/agent_pattern.ipynb
@@ -9,18 +9,36 @@
         "VNgdPBbNxdKh",
         "rHIPs8XTcfpR",
         "2znB-998RCON",
+        "rNEdkyFfV8N6",
         "EYy3pdEssWBy",
+        "EnxBn7oKyXnp",
+        "QbX58N3yysnY",
+        "_jzOCYQwy4wm",
         "VGAWF2-HzAbP",
+        "PenpfQEozrHO",
         "AcuUKrsWz5s0",
         "NiSZry960Mh3",
+        "v0AP8eGEzgu9",
+        "367WrFnS0e17",
+        "j-BkqhIj2bC1",
         "miRH6CEK5CyN",
         "toJNC1LRAvOE",
+        "gWWbEnBOS6rM",
         "khRXL2OnTlxt",
+        "JYvtjMkXZLWI",
+        "PJw5R3DBOy4l",
+        "hShGJ81oIdxe",
+        "WbLUjoo3Igwj",
+        "GrXF0OjnIyEE",
+        "xFfjh7x9JWo9",
         "VOMP0h8sJnNR",
+        "w8aAiDnmKUL-",
+        "LyVKLZgsJ8jg",
+        "fe5KwC1lK0eq",
         "TT35tciCpIRs"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNzbsWN7EfkcGPl0DtarBAm",
+      "authorship_tag": "ABX9TyNSirjXipTeebIMEAUgE/fx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2181,7 +2199,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### ㄴ 2.1.2 Validate"
+        "#### ㄴ 2.1.2 Validate\n",
+        "> 지금까지 **실행한 결과**가 **다음 단계**로 넘어가도 될 만큼 **\"신뢰 가능한 상태인가\"** 를 판정\n",
+        "\n",
+        "```javascript\n",
+        "EXECUTE → VALIDATE → (OK) → WRITE\n",
+        "                   → (FAIL) → REPLAN\n",
+        "```"
       ],
       "metadata": {
         "id": "PJw5R3DBOy4l"
@@ -2487,7 +2511,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### ㄴ 2.1.4 User Prompt"
+        "#### ㄴ 2.1.5 User Prompt"
       ],
       "metadata": {
         "id": "w8aAiDnmKUL-"
@@ -2507,7 +2531,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### ㄴ 2.1.4 Result"
+        "#### ㄴ 2.1.6 Result"
       ],
       "metadata": {
         "id": "LyVKLZgsJ8jg"
