updated DAG Workflow Description

--- a/agent_pattern.ipynb
+++ b/agent_pattern.ipynb
@@ -22,6 +22,7 @@
         "367WrFnS0e17",
         "j-BkqhIj2bC1",
         "miRH6CEK5CyN",
+        "I1aqzgNKnmsM",
         "toJNC1LRAvOE",
         "gWWbEnBOS6rM",
         "khRXL2OnTlxt",
@@ -38,7 +39,7 @@
         "TT35tciCpIRs"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNSirjXipTeebIMEAUgE/fx",
+      "authorship_tag": "ABX9TyPHutaiIm/xZOeXDztkytx5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -278,7 +279,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# [Gen 1] Prompt-driven Tool-Using Agents(ReAct-based Agents)\n",
+        "# [Gen 1] Prompt-driven Tool-Using Agents (ReAct-based Agents)\n",
         "> **LLM**이 매 순간 다음 행동을 **즉흥 결정**\n",
         "*   **LLM-Driven Agents**\n",
         "*   LLM이 생각(Reasoning) 하고\n",
@@ -1247,7 +1248,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# [Gen 2] LLM Orchestrated Systems(Post-ReAct Agent Architectures)\n",
+        "# [Gen 2] LLM Orchestrated Systems (Post-ReAct Agents)\n",
         "> Workflow Engine이 **순서를 결정**, LLM은 **필요할 때만 호출**\n",
         "*   **System-Driven Agents**\n",
         "*   계획 수립 / 의도 해석   ← LLM\n",
@@ -1269,7 +1270,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ㄴ 1. Plan-Then-Execute Core\n",
+        "## ㄴ 1. Plan-Then-Execute (Two-Phase Execution Architecture)\n",
         "> Plan → **Freeze** Plan → **Execute** Deterministically\n",
         ">"
       ],
@@ -1942,7 +1943,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ㄴ 2. State Machine\n",
+        "## ㄴ 2. State Machine (FSM-based Orchestration)\n",
         "\n",
         "*    LLM은 **상태를 읽고 판단만** 함.\n",
         "*    LLM은 이제 **행동 주체**가 아니라 **State**를 평가하는 **Decision Function**으로만 쓰임"
@@ -2880,8 +2881,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ㄴ 3. Graph Execution Pattern\n",
-        "> Agent는 더 이상 **Loop**가 아닌 **Directed Graph** 임"
+        "## ㄴ 3. Graph Execution (DAG Workflow Engine)\n",
+        "> Agent는 더 이상 **Loop**가 아닌 **Directed Graph** **(tool orchestration)**"
       ],
       "metadata": {
         "id": "JQfU0ZwCnz_o"
@@ -2890,21 +2891,34 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### ㄴ 3.1 Description"
+      ],
+      "metadata": {
+        "id": "OfcxNFvQmIea"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- State Machine은 **\"어떻게 상태가 바뀌는가?\"** 를 정의 (흐름을 관리하는 방식)\n",
+        "- Graph Execution은 **\"작업들이 어떤 의존관계로 연결되는가?\"** 를 정의 (작업 구조를 표현하는 방식)\n",
         "\n",
+        "- **Agent Framework Structure**\n",
+        "| Framework             | internal structure\n",
+        "| ----------------- | ---------------------------------------- |\n",
+        "| LangGraph         | Graph + State control                    |\n",
+        "| AutoGen           | Conversation State Machine + Tool Graph  |\n",
+        "| CrewAI            | Role-based State + Task Graph            |\n",
+        "| OpenAI Assistants | Run State Machine + Tool Execution Graph |\n",
         "\n",
-        "```javascript\n",
-        "[Plan]\n",
-        "  ↓\n",
-        "[Search] → [Analyze]\n",
-        "  ↓\n",
-        "[Write]\n",
-        "  ↓\n",
-        "[Validate]\n",
-        "```\n",
+        "- 구조 철학 :\n",
+        "  - Execution = Graph\n",
+        "  - Control = State Machine\n",
+        "\n",
         "\n"
       ],
       "metadata": {
-        "id": "FzHcvNTkoI4z"
+        "id": "MhsQY8UYmMQY"
       }
     },
     {
